--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <img src="./assets/05725C12-84F6-41B4-82B6-3B772785B503.jpeg" alt="Modelo con productos Somos Naturales" class="hero-blur-bkg absolute inset-0 object-cover  ">
         <div class="container mx-auto px-6 text-center relative z-10">
             <h3 class="text-2xl md:text-4xl mb-4 opacity-0 hero-text-animate delay-1" style="font-family: 'Cocomat Pro', sans-serif;">Somos Naturales</h3>
-            <h2 class="text-4xl md:text-6xl font-bold leading-tight mb-4 opacity-0 hero-text-animate delay-2">Tu piel habla, nuestra cosmética la entiende</h2>
+            <h2 class="text-4xl md:text-6xl font-bold leading-tight mb-4 opacity-0 hero-text-animate delay-2">Tu piel habla, nuestra cosmética <br/>la entiende</h2>
             <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto opacity-0 hero-text-animate delay-3">Descubre el poder de una cosmética consciente, diseñada para nutrir y respetar tu piel.</p>
             <a href="https://somosnaturalescosmetica.mitiendanube.com/productos/kit-coral-duo/?fbclid=PAQ0xDSwMRjKxleHRuA2FlbQIxMQABpwhP7MH3T9-g3ZT9gceL-vAvSF9YVnNU7M9_jkNKMZjQZRUytdVEVY-5RarF_aem_bjsY4KC9kYxJBJw8F9lPSg" target="_blank" class="btn bg-brand-primary text-white font-bold py-3 px-8 rounded-full text-lg inline-block opacity-0 hero-text-animate delay-3">
                 COMPRAR DÚO CORAL
@@ -247,7 +247,7 @@
     <section id="mayoristas" class="bg-brand-secondary py-16 scroll-animate">
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl md:text-4xl font-bold brand-text mb-6">Suma nuestra línea a tu local y diferencia tu propuesta</h2>
-            <p class="text-lg mb-8 max-w-2xl mx-auto">Ofrece a tus clientes productos de cosmética consciente, con fórmulas seguras y eficaces.</p>
+            <p class="text-lg mb-8 max-w-2xl mx-auto">Ofrece a tus clientes productos de cosmética consciente, <br/>con fórmulas seguras y eficaces.</p>
             <a href="https://wa.me/5491150100573?text=Hola!%20Quisiera%20recibir%20información%20sobre%20ventas%20mayoristas." target="_blank" class="btn bg-brand-primary text-white font-bold py-3 px-8 rounded-full text-lg inline-block">
                 Consultas Mayoristas
             </a>
