--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p class="mb-4">Cada fórmula que creamos está inspirada en ese camino: cuidar la piel sin agredirla, nutrirla sin sobrecargarla, acompañarla en sus procesos reales.</p>
                 </div>
                 <div>
-                    <img src="./assets/98D38326-FD2E-4AEC-8672-6C8F5C3C3C23.jpeg" alt="Mujer aplicando crema facial" class="rounded-lg shadow-xl w-full h-auto object-cover">
+                    <img src="./assets/foto1.jpeg" alt="Mujer aplicando crema facial" class="rounded-lg shadow-xl w-full h-auto object-cover">
                 </div>
             </div>
              <div class="grid md:grid-cols-2 gap-12 items-center mt-12">
